--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,10 @@
     transition: .2s;
 }
 .container{
-    margin: auto;
-    margin-top: 100px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-70%);
     width: 500px;
     max-width: 100%;
     background-color: var(--Dark-Grayish-Blue);
